# exercise_interface

./: CMakeLists.txt  README.md  cpt1.desktop  cpt2.desktop  cpt3.desktop  launch_client.desktop  launch_interface.desktop  launch_interface_joy.desktop  package.xml
data/: 7085.corpus  7085.sent  7085.vocab  README.md
data/TAR0445/: 0445.dic  0445.lm  0445.log_pronounce
include/: master_interface.h  script_utils.h  ui_components.h
launch/: copy_one.sh  copy_one.sh~  copy_three.sh  copy_two.sh  copy_two.sh~  interface.launch  interface_joy.launch
scripts/: grabBag.sh  joy_tag.py  killRecordNode.sh  launch_interface_joy.desktop  removeBags.sh  removeLastBag.sh
src/: main.cpp  master_interface.cpp  state_listener_main.cpp
